examples/test/testpolicy7606.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7606
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key21: value38
      key13: value1
      key40: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value48
      podSelector:
        matchLabels:
          key5: value29
          key17: value49
          key7: value37
